--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward_ios" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <title>storybound</title>
+  <title>StoryBound</title>
 </head>
 <body>
   <div class="back">
@@ -44,7 +44,7 @@
               <button> <a href="login.html"> log in</a></button>
             </div>
             <div class="sing">
-              <button><a href="singup.html">sing up</a></button>
+              <button><a href="signup.html">sing up</a></button>
             </div>
         </div>
 
