--- a/login.html
+++ b/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login-page</title>
+    <title>StoryBound -Log in-</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="outside">
         <div class="inside">
             <div class="form">
-                <a href="signup.html" class="back">←</a>
+                <a href="home.html" class="back">←</a>
                 <h1>Log in</h1>
                 <p class="underneath">welcome back!</p>
 
@@ -27,7 +27,7 @@
 
             </div>
             <div class="image">
-                <img src="image/background.jpg" alt="background">
+                <img src="imagelog/background.jpg" alt="background">
 
             </div>
         </div>
