--- a/moderndetective.html
+++ b/moderndetective.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storybound</title>
+    <title>StoryBound -Book- "Modern Detective"</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="modern.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-          <a href="#" class="back">←</a>
+            <a href="books.html" class="back">←</a>
         </div>
         <div class="book-cover">
             <img src="a modern detective.jpg" alt="book cover" id="image">
