--- a/crime.html
+++ b/crime.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StoryBound-Book-"crime & Punishement"</title>
+    <title>StoryBound -Book- "crime & Punishement"</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="home.html" class="back">←</a>
+            <a href="books.html" class="back">←</a>
         </div>
         <div class="book-cover">
             <img src="Crime and Punishment (Vintage Classics).jpg" alt="book cover" id="image">
