--- a/signup.html
+++ b/signup.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StoryBound-Sing up-</title>
+    <title>StoryBound -Sing up-</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="outside">
         <div class="inside">
             <div class="form">
-                <a href="" class="back">←</a>
+                <a href="home.html" class="back">←</a>
                 <h1>Create an account</h1>
                 <p class="underneath">Sign up now and unlock exlusive access!</p>
 
@@ -29,7 +29,7 @@
 
             </div>
             <div class="image">
-                <img src="image/background.jpg" alt="background">
+                <img src="imagelog/background.jpg" alt="background">
 
             </div>
         </div>
